change color in index.html

--- a/blogs/air-conditioner-maintenance/index.html
+++ b/blogs/air-conditioner-maintenance/index.html
@@ -41,8 +41,8 @@
    
     
     <!-- Additional SEO Meta Tags -->
-    <meta name="theme-color" content="#590d3d" />
-    <meta name="msapplication-TileColor" content="#590d3d" />
+    <meta name="theme-color" content="#153052" />
+    <meta name="msapplication-TileColor" content="#153052" />
     <meta name="application-name" content="آيرون كول - دليل صيانة المكيفات" />
     <meta name="apple-mobile-web-app-title" content="آيرون كول" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -528,7 +528,7 @@
                 <div class="bg-secondary-light rounded-2xl p-8 card-hover">
                     <div class="flex items-center mb-6">
                         <div class="w-16 h-16 bg-primary rounded-full flex items-center justify-center ml-4">
-                            <svg class="w-8 h-8 text-[#590d3d]" fill="currentColor" viewBox="0 0 20 20">
+                            <svg class="w-8 h-8 text-[#153052]" fill="currentColor" viewBox="0 0 20 20">
                                 <path d="M3 4a1 1 0 011-1h12a1 1 0 011 1v2a1 1 0 01-1 1H4a1 1 0 01-1-1V4z"/>
                             </svg>
                         </div>
@@ -562,7 +562,7 @@
                 <div class="bg-secondary-light rounded-2xl p-8 card-hover">
                     <div class="flex items-center mb-6">
                         <div class="w-16 h-16 bg-primary rounded-full flex items-center justify-center ml-4">
-                            <svg class="w-8 h-8 text-[#590d3d]" fill="currentColor" viewBox="0 0 20 20">
+                            <svg class="w-8 h-8 text-[#153052]" fill="currentColor" viewBox="0 0 20 20">
                                 <path d="M4 3a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V5a2 2 0 00-2-2H4z"/>
                             </svg>
                         </div>
@@ -596,7 +596,7 @@
                 <div class="bg-secondary-light rounded-2xl p-8 card-hover">
                     <div class="flex items-center mb-6">
                         <div class="w-16 h-16 bg-primary rounded-full flex items-center justify-center ml-4">
-                            <svg class="w-8 h-8 text-[#590d3d]" fill="currentColor" viewBox="0 0 20 20">
+                            <svg class="w-8 h-8 text-[#153052]" fill="currentColor" viewBox="0 0 20 20">
                                 <path d="M10 2L3 7v11a2 2 0 002 2h4v-6h2v6h4a2 2 0 002-2V7l-7-5z"/>
                             </svg>
                         </div>
@@ -630,7 +630,7 @@
                 <div class="bg-secondary-light rounded-2xl p-8 card-hover">
                     <div class="flex items-center mb-6">
                         <div class="w-16 h-16 bg-primary rounded-full flex items-center justify-center ml-4">
-                            <svg class="w-8 h-8 text-[#590d3d]" fill="currentColor" viewBox="0 0 20 20">
+                            <svg class="w-8 h-8 text-[#153052]" fill="currentColor" viewBox="0 0 20 20">
                                 <path d="M5 3a2 2 0 00-2 2v2a2 2 0 002 2h2a2 2 0 002-2V5a2 2 0 00-2-2H5z"/>
                             </svg>
                         </div>
