--- a/blogs/furniture-arrangement/index.html
+++ b/blogs/furniture-arrangement/index.html
@@ -395,11 +395,11 @@
   <table class="min-w-full border-collapse">
     <thead class="bg-gray-100">
       <tr>
-        <th class="p-3 text-sm font-bold text-[#590d3d] border">الطريقة العلمية</th>
-        <th class="p-3 text-sm font-bold text-[#590d3d] border">المجال التطبيقي</th>
-        <th class="p-3 text-sm font-bold text-[#590d3d] border">الأدوات المستخدمة</th>
-        <th class="p-3 text-sm font-bold text-[#590d3d] border">النتائج المتوقعة</th>
-        <th class="p-3 text-sm font-bold text-[#590d3d] border">التأثير البيئي</th>
+        <th class="p-3 text-sm font-bold text-[#153052] border">الطريقة العلمية</th>
+        <th class="p-3 text-sm font-bold text-[#153052] border">المجال التطبيقي</th>
+        <th class="p-3 text-sm font-bold text-[#153052] border">الأدوات المستخدمة</th>
+        <th class="p-3 text-sm font-bold text-[#153052] border">النتائج المتوقعة</th>
+        <th class="p-3 text-sm font-bold text-[#153052] border">التأثير البيئي</th>
       </tr>
     </thead>
     <tbody>
@@ -501,11 +501,11 @@
   <table class="min-w-full border-collapse">
     <thead class="bg-gray-100">
       <tr>
-        <th class="p-3 text-sm font-bold text-[#590d3d] border">مرحلة دورة الحياة</th>
-        <th class="p-3 text-sm font-bold text-[#590d3d] border">التأثير البيئي</th>
-        <th class="p-3 text-sm font-bold text-[#590d3d] border">النسبة من إجمالي التأثير</th>
-        <th class="p-3 text-sm font-bold text-[#590d3d] border">إمكانية التحسن</th>
-        <th class="p-3 text-sm font-bold text-[#590d3d] border">الإجراءات المقترحة</th>
+        <th class="p-3 text-sm font-bold text-[#153052] border">مرحلة دورة الحياة</th>
+        <th class="p-3 text-sm font-bold text-[#153052] border">التأثير البيئي</th>
+        <th class="p-3 text-sm font-bold text-[#153052] border">النسبة من إجمالي التأثير</th>
+        <th class="p-3 text-sm font-bold text-[#153052] border">إمكانية التحسن</th>
+        <th class="p-3 text-sm font-bold text-[#153052] border">الإجراءات المقترحة</th>
       </tr>
     </thead>
     <tbody>
@@ -661,11 +661,11 @@
   <table class="min-w-full border-collapse">
     <thead class="bg-gray-100">
       <tr>
-        <th class="p-3 text-sm font-bold text-[#590d3d] border">القطاع الاقتصادي</th>
-        <th class="p-3 text-sm font-bold text-[#590d3d] border">التأثير المباشر</th>
-        <th class="p-3 text-sm font-bold text-[#590d3d] border">التأثير غير المباشر</th>
-        <th class="p-3 text-sm font-bold text-[#590d3d] border">فرص العمل المتولدة</th>
-        <th class="p-3 text-sm font-bold text-[#590d3d] border">المساهمة في الناتج المحلي</th>
+        <th class="p-3 text-sm font-bold text-[#153052] border">القطاع الاقتصادي</th>
+        <th class="p-3 text-sm font-bold text-[#153052] border">التأثير المباشر</th>
+        <th class="p-3 text-sm font-bold text-[#153052] border">التأثير غير المباشر</th>
+        <th class="p-3 text-sm font-bold text-[#153052] border">فرص العمل المتولدة</th>
+        <th class="p-3 text-sm font-bold text-[#153052] border">المساهمة في الناتج المحلي</th>
       </tr>
     </thead>
     <tbody>
@@ -832,10 +832,10 @@
   <table class="min-w-full border-collapse">
     <thead class="bg-gray-100">
       <tr>
-        <th class="p-3 text-sm font-bold text-[#590d3d] border">هدف التنمية المستدامة</th>
-        <th class="p-3 text-sm font-bold text-[#590d3d] border">الصلة بترتيب الأثاث</th>
-        <th class="p-3 text-sm font-bold text-[#590d3d] border">المؤشرات القابلة للقياس</th>
-        <th class="p-3 text-sm font-bold text-[#590d3d] border">الأثر المتوقع بحلول 2030</th>
+        <th class="p-3 text-sm font-bold text-[#153052] border">هدف التنمية المستدامة</th>
+        <th class="p-3 text-sm font-bold text-[#153052] border">الصلة بترتيب الأثاث</th>
+        <th class="p-3 text-sm font-bold text-[#153052] border">المؤشرات القابلة للقياس</th>
+        <th class="p-3 text-sm font-bold text-[#153052] border">الأثر المتوقع بحلول 2030</th>
       </tr>
     </thead>
     <tbody>
@@ -997,11 +997,11 @@
   <table class="min-w-full border-collapse">
     <thead class="bg-gray-100">
       <tr>
-        <th class="p-3 text-sm font-bold text-[#590d3d] border">المنظمة/المبادرة</th>
-        <th class="p-3 text-sm font-bold text-[#590d3d] border">الهدف الرئيسي</th>
-        <th class="p-3 text-sm font-bold text-[#590d3d] border">الدول المشاركة</th>
-        <th class="p-3 text-sm font-bold text-[#590d3d] border">الإنجازات الرئيسية</th>
-        <th class="p-3 text-sm font-bold text-[#590d3d] border">الأثر المتوقع</th>
+        <th class="p-3 text-sm font-bold text-[#153052] border">المنظمة/المبادرة</th>
+        <th class="p-3 text-sm font-bold text-[#153052] border">الهدف الرئيسي</th>
+        <th class="p-3 text-sm font-bold text-[#153052] border">الدول المشاركة</th>
+        <th class="p-3 text-sm font-bold text-[#153052] border">الإنجازات الرئيسية</th>
+        <th class="p-3 text-sm font-bold text-[#153052] border">الأثر المتوقع</th>
       </tr>
     </thead>
     <tbody>
@@ -1084,11 +1084,11 @@
   <table class="min-w-full border-collapse">
     <thead class="bg-gray-100">
       <tr>
-        <th class="p-3 text-sm font-bold text-[#590d3d] border">الغرفة</th>
-        <th class="p-3 text-sm font-bold text-[#590d3d] border">الأولويات الوظيفية</th>
-        <th class="p-3 text-sm font-bold text-[#590d3d] border">الاعتبارات البيئية</th>
-        <th class="p-3 text-sm font-bold text-[#590d3d] border">النصائح الاقتصادية</th>
-        <th class="p-3 text-sm font-bold text-[#590d3d] border">مؤشرات النجاح</th>
+        <th class="p-3 text-sm font-bold text-[#153052] border">الغرفة</th>
+        <th class="p-3 text-sm font-bold text-[#153052] border">الأولويات الوظيفية</th>
+        <th class="p-3 text-sm font-bold text-[#153052] border">الاعتبارات البيئية</th>
+        <th class="p-3 text-sm font-bold text-[#153052] border">النصائح الاقتصادية</th>
+        <th class="p-3 text-sm font-bold text-[#153052] border">مؤشرات النجاح</th>
       </tr>
     </thead>
     <tbody>
