--- a/blogs/furniture-moving-companies/index.html
+++ b/blogs/furniture-moving-companies/index.html
@@ -680,7 +680,7 @@
                     </p>
                 </div>
 
-                <h3 class="text-2xl font-semibold mt-8 mb-4" style="color: #590d3d;">أهمية قطاع نقل الأثاث في الاقتصاد الكويتي</h3>
+                <h3 class="text-2xl font-semibold mt-8 mb-4" style="color: #153052;">أهمية قطاع نقل الأثاث في الاقتصاد الكويتي</h3>
                 
                 <p class="leading-relaxed mb-6">
                     يُشكل قطاع <strong>نقل الأثاث والخدمات اللوجستية</strong> جزءًا مهمًا من الاقتصاد الكويتي، حيث يساهم في دعم النمو العمراني والتطور الحضاري الذي تشهده البلاد. هذا القطاع لا يقتصر دوره على النقل فحسب، بل يمتد ليشمل خدمات التخزين، التغليف، الفك والتركيب، مما يجعله صناعة متكاملة توفر فرص عمل لآلاف الأشخاص وتساهم في الناتج المحلي الإجمالي. للمزيد من المعلومات حول الاقتصاد الكويتي، يمكنك زيارة <a href="https://www.cbk.gov.kw/" target="_blank" rel="noopener noreferrer">موقع بنك الكويت المركزي</a>.
@@ -702,7 +702,7 @@
             <div class="grid grid-cols-1 lg:grid-cols-3 gap-8">
                 <div class="lg:col-span-2">
                     <div class="main-content">
-                        <h3 class="text-2xl font-semibold mb-6" style="color: #590d3d;">
+                        <h3 class="text-2xl font-semibold mb-6" style="color: #153052;">
                             <i class="fas fa-check-circle me-2" style="color: #e8c468;"></i>
                             المعايير التي لا يمكن التنازل عنها
                         </h3>
@@ -1007,7 +1007,7 @@
                     </p>
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                         <div>
-                            <h6 class="text-lg font-semibold mb-3" style="color: #590d3d;">تقييم نوع وحجم الأثاث</h6>
+                            <h6 class="text-lg font-semibold mb-3" style="color: #153052;">تقييم نوع وحجم الأثاث</h6>
                             <ul class="list-disc pr-6 space-y-1">
                                 <li>الأثاث الثقيل (خزائن، أسرّة، طاولات كبيرة)</li>
                                 <li>الأغراض الهشة (تحف، مرايا، أجهزة إلكترونية)</li>
@@ -1016,7 +1016,7 @@
                             </ul>
                         </div>
                         <div>
-                            <h6 class="text-lg font-semibold mb-3" style="color: #590d3d;">تحديد نطاق الخدمة</h6>
+                            <h6 class="text-lg font-semibold mb-3" style="color: #153052;">تحديد نطاق الخدمة</h6>
                             <ul class="list-disc pr-6 space-y-1">
                                 <li>النقل المحلي داخل المدينة</li>
                                 <li>النقل بين المحافظات</li>
