change seo blogs page

--- a/blogs/index.html
+++ b/blogs/index.html
@@ -131,18 +131,26 @@
         <div class="blog-particles" id="blogParticles"></div>
         <div class="container-custom relative z-10">
             <!-- Blog Header -->
-            <div class="text-center mb-16">
-                <h2 class="text-4xl lg:text-5xl font-bold text-luxury mb-6 font-luxury">مدونة المشاريع</h2>
-               <p class="text-xl text-yellow-600 opacity-80 max-w-3xl mx-auto font-elegant leading-relaxed">
-                اكتشف قصص نجاح مشاريعنا ونصائح الخبراء في عالم الخدمات المنزلية الفاخرة
-            </p>
+              <div class="text-center mb-16 pt-5">
+                <h2 class="text-4xl lg:text-5xl font-bold text-luxury mb-6 font-luxury">مدونة خدمات الخليج | نصائح وقصص نجاح الخدمات المنزلية في السعودية والخليج العربي </h2>
+                 <p class="text-xl text-yellow-600 opacity-80 max-w-4xl mx-auto font-elegant leading-relaxed mb-8">
+                    اكتشف أحدث النصائح والإرشادات من خبراء <strong>الخدمات المنزلية في الخليج العربي</strong>. 
+                    تعرف على قصص نجاح <strong>شركات التنظيف، نقل العفش، وصيانة المكيفات</strong> في 
+                    <strong>السعودية، الإمارات، الكويت، وقطر</strong>. دليلك الشامل لأفضل الممارسات 
+                    والحلول المبتكرة في عالم الخدمات المنزلية الاحترافية.
+                </p>
+                <a href="./"></a>
             </div>
 
             <!-- Moving Services Section -->
             <div class="blog-section">
-                <div class="section-header">
-                    <h3><i class="fas fa-truck ml-2"></i>  خدمات نقل العفش في الخليج – مشاريع احترافية مع تغليف وفك وتركيب متميز</h3>
-                    <p>مشاريع نقل العفش المتميزة وقصص النجاح في جميع أنحاء الخليج</p>
+                 <div class="section-header">
+                    <h3><i class="fas fa-truck ml-2"></i>خدمات نقل العفش داخل الخليج - دراسات حالة ومشاريع ناجحة</h3>
+                    <p class="text-lg text-gray max-w-3xl mx-auto leading-relaxed">
+                        اكتشف أفضل الممارسات في <strong>نقل العفش والأثاث</strong> من خلال تجارب حقيقية وخبرات 
+                        <strong>أفضل شركات نقل العفش في السعودية والإمارات والكويت</strong>. نصائح احترافية لضمان 
+                        نقل آمن ومضمون لجميع أنواع الأثاث والممتلكات الثمينة.
+                    </p>
                 </div>
                 <div class="cards-grid" id="movingCards">
                     <!-- Moving service cards will be inserted here -->
@@ -151,10 +159,13 @@
 
             <!-- Cleaning Services Section -->
             <div class="blog-section">
-                <div class="section-header">
-                    <h3><i class="fas fa-broom ml-2"></i> خدمات تنظيف احترافية للمنازل والمكاتب – أحدث تقنيات التنظيف في الخليج</h3>
-                    <p>مشاريع التنظيف الشاملة والتقنيات الحديثة المستخدمة</p>
-                </div>
+                  <div class="section-header">
+                    <h3><i class="fas fa-broom ml-2"></i>    خدمات التنظيف || أسرار التنظيف الاحترافي في السعودية والخليج العربي</h3>
+                     <p class="text-lg text-gray max-w-3xl mx-auto leading-relaxed">
+                        تعلم أحدث تقنيات <strong>التنظيف العميق والشامل</strong> من خبراء <strong>شركات التنظيف المعتمدة</strong> 
+                        في الخليج العربي. نصائح احترافية لتنظيف المنازل، المكاتب، والفلل بأعلى معايير الجودة والنظافة.
+                      </p>             
+                   </div>
                 <div class="cards-grid" id="cleaningCards">
                     <!-- Cleaning service cards will be inserted here -->
                 </div>
@@ -163,9 +174,12 @@
             <!-- Maintenance Services Section -->
             <div class="blog-section">
                 <div class="section-header">
-                    <h3><i class="fas fa-tools ml-2"></i> خدمات صيانة شاملة – حلول فنية وتقنية للأعطال المنزلية والتجارية</h3>
-                    <p>مشاريع الصيانة المتخصصة والحلول التقنية المبتكرة</p>
-                </div>
+                    <h3><i class="fas fa-tools ml-2"></i>خدمات الصيانه || دليل الصيانة المنزلية الشاملة في الخليج العربي </h3>
+                     <p class="text-lg text-gray max-w-3xl mx-auto leading-relaxed">
+                        اكتشف أفضل ممارسات <strong>الصيانة المنزلية والتجارية</strong> من خبراء <strong>شركات الصيانة المعتمدة</strong> 
+                        في الخليج العربي. نصائح لصيانة المكيفات، الكهرباء، السباكة، والأجهزة المنزلية.
+                     </p>             
+                 </div>
                 <div class="cards-grid" id="maintenanceCards">
                     <!-- Maintenance service cards will be inserted here -->
                 </div>
