--- a/index.html
+++ b/index.html
@@ -580,10 +580,11 @@
             <div class="blog-section">
                 <div class="section-header">
                     <h3><i class="fas fa-broom ml-2"></i>    خدمات التنظيف || أسرار التنظيف الاحترافي في السعودية والخليج العربي</h3>
-               <p class="text-lg text-gray max-w-3xl mx-auto leading-relaxed">
+                     <p class="text-lg text-gray max-w-3xl mx-auto leading-relaxed">
                         تعلم أحدث تقنيات <strong>التنظيف العميق والشامل</strong> من خبراء <strong>شركات التنظيف المعتمدة</strong> 
                         في الخليج العربي. نصائح احترافية لتنظيف المنازل، المكاتب، والفلل بأعلى معايير الجودة والنظافة.
-                    </p>                </div>
+                      </p>             
+                   </div>
                 <div class="cards-grid" id="cleaningCards">
                     <!-- Cleaning service cards will be inserted here -->
                 </div>
@@ -593,10 +594,11 @@
             <div class="blog-section">
                 <div class="section-header">
                     <h3><i class="fas fa-tools ml-2"></i>خدمات الصيانه || دليل الصيانة المنزلية الشاملة في الخليج العربي </h3>
-               <p class="text-lg text-gray max-w-3xl mx-auto leading-relaxed">
+                     <p class="text-lg text-gray max-w-3xl mx-auto leading-relaxed">
                         اكتشف أفضل ممارسات <strong>الصيانة المنزلية والتجارية</strong> من خبراء <strong>شركات الصيانة المعتمدة</strong> 
                         في الخليج العربي. نصائح لصيانة المكيفات، الكهرباء، السباكة، والأجهزة المنزلية.
-                    </p>                </div>
+                     </p>             
+                 </div>
                 <div class="cards-grid" id="maintenanceCards">
                     <!-- Maintenance service cards will be inserted here -->
                 </div>
