add meta and add seo

--- a/blogs/index.html
+++ b/blogs/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="أفضل خدمات نقل الأثاث والعفش في الرياض مع تغليف احترافي، نقل آمن، أسعار تنافسية، وضمان حماية كاملة لممتلكاتك طوال عملية النقل.">
     <meta name="keywords" content="نقل عفش, نقل أثاث, نقل الأثاث في الرياض, خدمات نقل العفش, تغليف الأثاث, شركات نقل عفش بالرياض, نقل أثاث آمن, أسعار نقل العفش بالرياض">
     <meta name="author" content="خدمات الرياض لنقل العفش">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
     <link rel="canonical" href="https://gooldenmoon.com/blogs/">
     
     <!-- Open Graph / Facebook / WhatsApp / Telegram -->
