--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>خدمات الخليج | كل ما تحتاجه من خدمات في مكان واحد - نقل، تنظيف، صيانة وأكثر</title>
    <link rel="icon" href="https://goldenmoonads.com/mainlogo.png" type="image/png">
+   <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
    <!-- Basic Meta Tags -->
 
     <meta name="description" content="خدمات الخليج هي منصتك الشاملة للحصول على أفضل خدمات نقل الأثاث، التنظيف، الصيانة، والتكييف في السعودية ودول الخليج بجودة عالية وأسعار تنافسية.">
@@ -24,7 +25,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="خدمات الخليج | كل ما تحتاجه من خدمات في مكان واحد - نقل، تنظيف، صيانة وأكثر">
     <meta name="twitter:description" content="كل خدماتك المنزلية والتجارية تجدها هنا - سرعة، جودة، وأسعار تنافسية تغطي كافة مدن الخليج.">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
