Delete social media links

--- a/blogs/cleanliness-in-the-Gulf/index.html
+++ b/blogs/cleanliness-in-the-Gulf/index.html
@@ -1716,20 +1716,20 @@
                     
                     
 
-                    <div class="flex gap-3 justify-center lg:justify-start">
-                        <a href="https://www.facebook.com/golden.moon.compa?mibextid=qi2Omg&rdid=9UEujZC…ttps%3A%2F%2Fwww.facebook.com%2Fshare%2F19EWAR5kSM%2F%3Fmibextid%3Dqi2Omg#" class="social-icon facebook" title="فيسبوك">
+                      <div class="flex gap-3 justify-center lg:justify-start">
+                        <a href="#" class="social-icon facebook" title="فيسبوك">
                             <i class="fab fa-facebook-f"></i>
                         </a>
-                        <a href="https://x.com/Golden_Moon2024" class="social-icon twitter" title="تويتر">
+                        <a href="#" class="social-icon twitter" title="تويتر">
                             <i class="fab fa-twitter"></i>
                         </a>
-                        <a href="https://www.instagram.com/golden_moon_company" class="social-icon instagram" title="إنستغرام">
+                        <a href="#" class="social-icon instagram" title="إنستغرام">
                             <i class="fab fa-instagram"></i>
                         </a>
-                        <a href="https://www.tiktok.com/@golden.moon.company" class="social-icon tiktok" title="تيك توك">
+                        <a href="#" class="social-icon tiktok" title="تيك توك">
                             <i class="fab fa-tiktok"></i>
                         </a>
-                        <a href="https://wa.me/966565265233" class="social-icon whatsapp" title="واتساب">
+                        <a href="#" class="social-icon whatsapp" title="واتساب">
                             <i class="fab fa-whatsapp"></i>
                         </a>
                     </div>
