--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
  
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>خدمات الخليج | كل ما تحتاجه من خدمات في مكان واحد - نقل، تنظيف، صيانة وأكثر</title>
    <link rel="icon" href="https://goldenmoonads.com/mainlogo.png" type="image/png">
    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
@@ -1188,19 +1188,19 @@
                     
 
                     <div class="flex gap-3 justify-center lg:justify-start">
-                        <a href="https://www.facebook.com/golden.moon.compa?mibextid=qi2Omg&rdid=9UEujZC…ttps%3A%2F%2Fwww.facebook.com%2Fshare%2F19EWAR5kSM%2F%3Fmibextid%3Dqi2Omg#" class="social-icon facebook" title="فيسبوك">
+                        <a href="#" class="social-icon facebook" title="فيسبوك">
                             <i class="fab fa-facebook-f"></i>
                         </a>
-                        <a href="https://x.com/Golden_Moon2024" class="social-icon twitter" title="تويتر">
+                        <a href="#" class="social-icon twitter" title="تويتر">
                             <i class="fab fa-twitter"></i>
                         </a>
-                        <a href="https://www.instagram.com/golden_moon_company" class="social-icon instagram" title="إنستغرام">
+                        <a href="#" class="social-icon instagram" title="إنستغرام">
                             <i class="fab fa-instagram"></i>
                         </a>
-                        <a href="https://www.tiktok.com/@golden.moon.company" class="social-icon tiktok" title="تيك توك">
+                        <a href="#" class="social-icon tiktok" title="تيك توك">
                             <i class="fab fa-tiktok"></i>
                         </a>
-                        <a href="https://wa.me/966565265233" class="social-icon whatsapp" title="واتساب">
+                        <a href="#" class="social-icon whatsapp" title="واتساب">
                             <i class="fab fa-whatsapp"></i>
                         </a>
                     </div>
