delete link icon

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>خدمات الخليج | كل ما تحتاجه من خدمات في مكان واحد - نقل، تنظيف، صيانة وأكثر</title>
-   <link rel="icon" href="https://goldenmoonads.com/mainlogo.png" type="image/png">
+   
    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
    <!-- Basic Meta Tags -->
 
@@ -278,14 +278,14 @@
             </div>
 
             <div class="luxury-card p-8 text-center hidden sm:block">
-    <div class="flex justify-center mb-4">
-        <div class="w-20 h-20 rounded-full bg-yellow-600 bg-opacity-20 flex items-center justify-center shadow-lg">
-            <i class="fas fa-globe text-yellow-600 text-4xl"></i>
-        </div>
-    </div>
-     <h2 class="text-2xl font-bold text-yellow-600 mb-4 font-luxury">خدماتنا في الخليج العربي</h2>
-                    <p class="text-silver-mist font-elegant mb-2">نقدم حلولاً متكاملة للمنازل والشركات، تشمل:</p>
-                    <ul class="text-silver-mist text-right leading-relaxed text-lg space-y-2 font-elegant">
+                 <div class="flex justify-center mb-4">
+                    <div class="w-20 h-20 rounded-full bg-yellow-600 bg-opacity-20 flex items-center justify-center shadow-lg">
+                    <i class="fas fa-globe text-yellow-600 text-4xl"></i>
+                     </div>
+                </div>
+                    <h2 class="text-2xl font-bold text-yellow-600 mb-4 font-luxury">خدماتنا في الخليج العربي</h2>
+                    <p class="text font-elegant mb-2">نقدم حلولاً متكاملة للمنازل والشركات، تشمل:</p>
+                    <ul class=" text-right leading-relaxed text-lg space-y-2 font-elegant">
                         <li><i class="fas fa-truck-moving ml-2 text-yellow-600" aria-hidden="true"></i> نقل الأثاث والعفش بأمان</li>
                         <li><i class="fas fa-broom ml-2 text-yellow-600" aria-hidden="true"></i> خدمات التنظيف الشاملة</li>
                         <li><i class="fas fa-tools ml-2 text-yellow-600" aria-hidden="true"></i> صيانة منزلية احترافية</li>
@@ -293,7 +293,7 @@
                         <li><i class="fas fa-bug ml-2 text-yellow-600" aria-hidden="true"></i> مكافحة الحشرات</li>
                         <li><i class="fas fa-plus ml-2 text-yellow-600" aria-hidden="true"></i> والمزيد من الخدمات المتخصصة</li>
                     </ul>
-</div>
+            </div>
 
         </div>
     </div>
