--- a/blogs/furniture-moving-companies/index.html
+++ b/blogs/furniture-moving-companies/index.html
@@ -44,7 +44,7 @@
             --text-dark: #2c3e50;
             --text-light: #6c757d;
             --border-light: #e9ecef;
-            --gradient-soft: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+            --gradient-soft: linear-gradient(135deg, #f3f7fc 0%, #c3cfe2 100%);
             --gradient-primary: linear-gradient(135deg, #153052 0%, #153052 100%);
             --gradient-secondary: linear-gradient(135deg, #153052 0%, #153052 100%);
         }
